[project]
name = "excel-mcp-server"
version = "0.1.0"
description = "Excel MCP Server - Python version using FastMCP (port of github.com/negokaz/excel-mcp-server)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp[apps]>=3.1.0",
    "prefab-ui==0.8.0",
    "openpyxl>=3.1.0",
]

[project.scripts]
excel-mcp-server = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]
